--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,7 @@ jobs:
             rogeriop1990cv/kubenews:latest
             rogeriop1990cv/kubenews:${{ github.run_number }}
   CD: 
+    needs: [CI]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
