--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,3 +36,11 @@ jobs:
         with:
           method: kubeconfig
           kubeconfig: ${{ secrets.K8S_CONFIG }}
+
+      - name: Deploy to Kubernetes cluster
+        uses: Azure/k8s-deploy@v4.2
+        with:
+          images: rogeriop1990cv/kubenews:${{ github.run_number }}
+          manifests: |
+            k8s/deployment.yaml
+            
